--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -2,3 +2,6 @@
 "This will reset your UI bookmarks such as state of filters, column positions, grid sorting, pagination and so on.","Damit werden benutzerdefinierte Filtereinstellungen zurückgesetzt. Zum Beispiel die Positionen der Spalten in Tabellen und Sortierungen."
 "Your UI Bookmarks were cleared successfully.","Deine UI Bookmarks wurden erfolgreich zurückgesetzt."
 "We were unable to submit your request. Please try again!","Es ist ein Fehler aufgetreten. Bitte versuche es noch einmal."
+"All Bookmarks","Alle Bookmarks"
+"Saved Filters Only","Nur gespeicherte Filter"
+"Keep Saved Filters","Gespeicherte Filter behalten"
