--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -2,3 +2,6 @@
 "This will reset your UI bookmarks such as state of filters, column positions, grid sorting, pagination and so on.","This will reset your UI bookmarks such as state of filters, column positions, grid sorting, pagination and so on."
 "Your UI Bookmarks were cleared successfully.","Your UI Bookmarks were cleared successfully."
 "We were unable to submit your request. Please try again.","We were unable to submit your request. Please try again."
+"All Bookmarks","All Bookmarks"
+"Saved Filters Only","Saved Filters Only"
+"Keep Saved Filters","Keep Saved Filters"
