--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -1,7 +1,8 @@
 "Reset UI Bookmarks","Réinitialiser UI Bookmarks "
-"This will reset your UI bookmarks such as state of filters, column positions, grid sorting, pagination and so on.","Cela réinitialisera vos signets d'interface utilisateur tels que l'état des filtres, les positions des colonnes, le tri des tables, la pagination, etc."
+"This will reset UI bookmarks such as state of filters, column positions, grid sorting, pagination and so on.","Cela réinitialisera vos signets d'interface utilisateur tels que l'état des filtres, les positions des colonnes, le tri des tables, la pagination, etc."
 "Your UI Bookmarks were cleared successfully.","Vos signets d'interface utilisateur ont été effacés avec succès."
 "We were unable to submit your request. Please try again.","Nous n'avons pas pu soumettre votre demande. Veuillez réessayer."
+"No UI Bookmarks found for user (%1).","Aucun signet d'interface utilisateur trouvé pour l'utilisateur administrateur (%1)."
 "All Bookmarks","Tous les signets"
 "Saved Filters Only","Filtres enregistrés uniquement"
 "Keep Saved Filters","Conserver les filtres enregistrés"
